[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/msgBase/msgBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/selTuPuMsg/selTuPuMsg.gd" type="Script" id=2]

[node name="Control" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -219.5
margin_right = 219.0
margin_bottom = 219.5
window_title = "图谱"
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -86.0
margin_right = 42.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="VBoxContainer" index="0"]
margin_right = 86.0
margin_bottom = 43.3754
text = "天赋|升级"

[node name="Button" type="Button" parent="VBoxContainer" index="1"]
margin_top = 47.0
margin_right = 86.0
margin_bottom = 90.3754
text = "生物图谱"

[node name="Button2" type="Button" parent="VBoxContainer" index="2"]
margin_top = 94.0
margin_right = 86.0
margin_bottom = 137.375
text = "装备图鉴"

[node name="Button3" type="Button" parent="VBoxContainer" index="3"]
margin_top = 141.0
margin_right = 86.0
margin_bottom = 184.375
text = "公共状态"
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
